/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package edu.upc.etsetb.arqsoft.spreadsheet.domain;

import edu.upc.etsetb.arqsoft.spreadsheet.Visitor;
import edu.upc.etsetb.arqsoft.spreadsheet.Element;

/**
 *
 * @author betbp
 */
public abstract class FormulaComponent  implements Element{
    
    public FormulaComponent(){  
    }
 
}
