@startuml
abstract class arqsoft.spreadsheet.domain.Content
abstract class arqsoft.spreadsheet.domain.FormulaComponent
abstract class arqsoft.spreadsheet.domain.Function
abstract class arqsoft.spreadsheet.domain.Operand
abstract class arqsoft.spreadsheet.domain.Operator
abstract class arqsoft.spreadsheet.domain.Parentheses
class arqsoft.spreadsheet.Calculator
class arqsoft.spreadsheet.FileLoader
class arqsoft.spreadsheet.FileManager
class arqsoft.spreadsheet.FileParser
class arqsoft.spreadsheet.FileSaver
class arqsoft.spreadsheet.FormulaComponentFabric
class arqsoft.spreadsheet.Manager
class arqsoft.spreadsheet.SpreadManager
class arqsoft.spreadsheet.StringParser
class arqsoft.spreadsheet.Token
class arqsoft.spreadsheet.UserInterface
class arqsoft.spreadsheet.domain.Cell
class arqsoft.spreadsheet.domain.CellOperand
class arqsoft.spreadsheet.domain.CloseParetheses
class arqsoft.spreadsheet.domain.DivisionOperator
class arqsoft.spreadsheet.domain.Formula
class arqsoft.spreadsheet.domain.MaxFunction
class arqsoft.spreadsheet.domain.MeanFunction
class arqsoft.spreadsheet.domain.MinFunction
class arqsoft.spreadsheet.domain.MultiplicationOperator
class arqsoft.spreadsheet.domain.NumberOperand
class arqsoft.spreadsheet.domain.Numerical
class arqsoft.spreadsheet.domain.OpenParentheses
class arqsoft.spreadsheet.domain.RangeOperand
class arqsoft.spreadsheet.domain.Spreadsheet
class arqsoft.spreadsheet.domain.SubstractionOperator
class arqsoft.spreadsheet.domain.SumFunction
class arqsoft.spreadsheet.domain.SumOperator
class arqsoft.spreadsheet.domain.Text
class arqsoftspreadsheet.ArqsoftSpreadsheet
class java.util.List
interface arqsoft.spreadsheet.Observer
interface arqsoft.spreadsheet.Subject
arqsoft.spreadsheet.domain.Function ..> java.util.List
arqsoft.spreadsheet.Calculator ..> arqsoft.spreadsheet.domain.FormulaComponent
arqsoft.spreadsheet.Calculator ..> arqsoft.spreadsheet.domain.CellOperand
arqsoft.spreadsheet.Calculator ..> java.util.List
arqsoft.spreadsheet.FormulaComponentFabric ..> arqsoft.spreadsheet.domain.FormulaComponent
arqsoft.spreadsheet.SpreadManager ..> arqsoft.spreadsheet.domain.Spreadsheet
arqsoft.spreadsheet.StringParser ..> arqsoft.spreadsheet.domain.FormulaComponent
arqsoft.spreadsheet.StringParser ..> java.util.List
arqsoft.spreadsheet.domain.Cell ..> arqsoft.spreadsheet.Observer
arqsoft.spreadsheet.domain.Cell --|> arqsoft.spreadsheet.Subject
arqsoft.spreadsheet.domain.Formula --|> arqsoft.spreadsheet.Observer
arqsoft.spreadsheet.domain.RangeOperand ..> java.util.List
@enduml